fixes teaser text align at smaller screenwidths

--- a/dev/scss/elements/_teaser.scss
+++ b/dev/scss/elements/_teaser.scss
@@ -1,5 +1,8 @@
 .teaser {
-  text-align: center;
+
+  @media (min-width: $l) {
+    text-align: center;
+  }
 
   .index-list {
     @include full-width;
